deinterlace : Regression handling telecine/onefield streams
Introduced by !472 (merged)
The problem is that currently it doesn't make any difference between:
- A frame which has two fields but only one contains valid data (which is what the field meant)
- A frame which has a single field (which is the new changed)
You can use the following file to see the regression and gst-launch-1.0 -v uridecodebin uri=file:///.../dvgrab-2008.03.05_08-55-01.m2t ! fieldanalysis ! deinterlace ! autovideosink
. in 1.16 it works fine, in 1.18 it flickers because it's wrongly using the onefield flag